--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint": "^9.9.0",
     "globals": "^15.9.0",
     "nodemon": "^3.1.4"
+  },
+  "dependencies": {
+    "detect-file-encoding-and-language": "^2.4.0"
   }
 }
